fixed nav elements position on mobile design

--- a/MultiPage-Clone/css/main.css
+++ b/MultiPage-Clone/css/main.css
@@ -576,7 +576,7 @@ footer {
   html {
     margin: 0;
     width: 100vw;
- 
+    overflow-x: hidden;
   }
   header {
     width: 100%;
@@ -588,6 +588,27 @@ footer {
     display: flex;
     flex-direction: column;
     height: 7rem;
+    padding: 1rem;
+  }
+  .logo-list {
+    flex: 50%;
+    display: flex;
+    justify-content: space-between;
+  }
+  .menu {
+    height: 3rem;
+    width: 4rem;
+    background-color: white;
+    display: block;
+  }
+  .open {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+  }
+  .wrapper span {
+    right: -0.5rem;
+    top: 9.1rem;
   }
   .hero {
     width: 100%;
@@ -597,13 +618,13 @@ footer {
   .hero-card {
     width: 100%;
   }
-  .heading{
+  .heading {
     font-size: 2rem;
   }
   .nav-links {
     display: none;
   }
-  .cart {
+  .log-in {
     display: none;
   }
   .input {
@@ -612,33 +633,20 @@ footer {
   #search-icon {
     top: 1.5rem;
   }
-  .logo-list {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100;
-  }
-  .menu {
-    display: block;
-  }
-  .open {
-    display: flex;
-    flex-direction: column;
-    width: 70%;
-  }
+
   .card-container {
     display: flex;
     flex-direction: column;
     height: 120rem;
   }
-  .card{
+  .card {
     width: 100%;
   }
   .about-us {
     flex-direction: column;
     height: 80rem;
   }
-  
+
   .buy-online {
     display: flex;
     flex-direction: column;
@@ -651,51 +659,53 @@ footer {
     width: 100%;
     padding: 2rem;
   }
-  .buy-online{
+  .buy-online {
     flex-direction: column;
     height: 70rem;
   }
-  .buy-online-card{
-  width: 100%;
-  padding: 1rem;
+  .buy-online-card {
+    width: 100%;
+    padding: 1rem;
   }
-  .contact-form{
+  .contact-form {
     width: 96%;
     height: 90%;
   }
-  .contact-form h2::after{
+  .contact-form h2::after {
     margin-top: 3rem;
   }
-  footer{
+  footer {
     height: auto;
     flex-direction: column;
     gap: 5rem;
   }
-  .list-container{
+  .list-container {
     flex-direction: column;
     gap: 2rem;
   }
-  .footer-list-heading{
+  .footer-list-heading {
     margin-bottom: 0.5rem;
   }
-  .subscribe-form{
+  .subscribe-form {
     width: 100%;
     flex-direction: column;
     align-items: center;
     margin-top: 2rem;
     padding-inline: 1rem;
   }
-  .subscribe-btn{
+  .subscribe-btn {
     width: 100%;
   }
   .subscribe-form label,
-  .subscribe-form input{
+  .subscribe-form input {
     width: 100%;
   }
-  .msg{
+  .msg {
+    right: 0.5rem;
     width: 3rem;
+    border-radius: 50%;
   }
-.msg-span{
-  display: none;
-}
+  .msg-span {
+    display: none;
+  }
 }
